<resources>
    <string name="app_name">Inventory Application</string>
    <string name="add_product">Add a product</string>
    <string name="empty_inventory_image">Empty inventory</string>
    <string name="empty_inventory_warning">Seems pretty empty here.</string>
    <string name="empty_inventory_subtitle">Add some products to the inventory.</string>
    <string name="quantity_label" translatable="false">In Stock:</string>
    <string name="add_dummy_product">Insert dummy data</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="catalog_activity">Products</string>
    <string name="label_product">Product</string>
    <string name="label_quantity_in_stock">Stock</string>
    <string name="label_price">Price</string>
    <string name="label_quantity_sold">Sold</string>
    <string name="group_header_supplier">Supplier Information</string>
    <string name="label_supplier_name">Company name</string>
    <string name="label_email_address">Contact email address</string>
    <string name="group_header_product">Product Details</string>
    <string name="group_header_order">Place Order</string>
    <string name="label_quantity_ordered">Quantity</string>
    <string name="default_order_amount">0</string>
    <string name="save">Save</string>
    <string name="delete_product">Delete</string>
    <string name="empty_name_field_warning">"Enter a product name"</string>
    <string name="empty_price_field_warning">Enter product price</string>
    <string name="image_upload">Upload</string>
    <string name="empty_image_field_warning">Upload an image</string>
    <string name="empty_stock_qty_field_warning">Set amount of available quantity</string>
    <string name="delete_product_action_failed">Error with deleting product</string>
    <string name="insert_product_action_failed">Error with saving pet</string>
    <string name="insert_product_action_successful">Product saved</string>
    <string name="update_product_action_failed">Error with updating product</string>
    <string name="update_product_action_successful">Product updated</string>
    <string name="delete_product_action_successful">Product deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_activity_title_insert_product">Add new product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="delete_product_dialog_msg">"Do you want to delete this product? "</string>
    <string name="delete">Delete</string>
    <string name="add_random_product_action_successful">Product added</string>
    <string name="add_random_product_action_failed">Error adding random product</string>
</resources>
