<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_image_upload" />

                <Button
                    android:id="@+id/action_image_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_rectangle_background"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/image_upload" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/group_header_product"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/label_product">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="words"
                        android:inputType="textCapWords"
                        tools:text="Vitra Panton Chairs" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        tools:text="316.59" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:hint="@string/label_quantity_in_stock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantity_in_stock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textAlignment="center"
                            tools:text="0" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/action_add_quantity_in_stock"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:background="@drawable/button_oval_background"
                            android:src="@drawable/ic_arrow_drop_up_black_24dp"
                            android:tint="@android:color/white" />

                        <ImageButton
                            android:id="@+id/action_remove_quantity_in_stock"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/button_oval_background"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp"
                            android:tint="@android:color/white" />

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="16dp"
                        android:layout_weight="3"
                        android:hint="@string/label_quantity_sold">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantity_sold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="number"
                            android:textAlignment="center"
                            tools:text="0" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/group_header_supplier"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/label_supplier_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:capitalize="words"
                android:inputType="textCapWords"
                tools:text="Paul Moret" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:text="paulmoret@furniture.wood" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/group_header_order"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_quantity_ordered">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/default_order_amount"
                    android:textAlignment="center"
                    tools:text="0" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_rectangle_background"
                android:padding="4dp">

                <ImageButton
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:background="@drawable/button_oval_background"
                    android:src="@drawable/ic_send" />

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

